fix spacing

--- a/components/Chart/Chart.module.css
+++ b/components/Chart/Chart.module.css
@@ -1,7 +1,7 @@
 .basic {
-  height: 226px;
+  height: 180px;
 }
 
 .gradient, .choropleth {
-  height: 84px;
+  height: 40px;
 }
